tests/fixtures/invalid/dict_in_float.py
# Cannot use 'in' with Dict[str, int] and Float
x: bool = {"a": 1} in 1.0
